Utilises XStream security framework introduced in v1.4.7. https://x-stream.github.io/security.html#framework